Final form alignment fixes

--- a/Platform/Form/css/form.css
+++ b/Platform/Form/css/form.css
@@ -1,5 +1,7 @@
 .platform_form_field_container {
     margin-bottom: 1px;
+    margin-top: 3px;
+    margin-bottom: 3px;
 }
 
 .platform_form_global_error_container {
@@ -14,11 +16,12 @@
 
 .platform_field_label_container {
     display: flex;
-    align-items: baseline;
+    align-items: flex-start;
 }
 
 .platform_field_label_container > label {
     flex-shrink: 0;
+    padding-top: 2px;
 }
 
 .platform_field_label_container > .platform_field_input_container {
